[gd_scene load_steps=11 format=4 uid="uid://q6rcqnftg2g8"]

[ext_resource type="Script" uid="uid://b3kcdyd5xxr6c" path="res://scenes/game/node.gd" id="1_xk3sj"]
[ext_resource type="Texture2D" uid="uid://wad4tf3kekvu" path="res://assets/map/background.png" id="2_50voc"]
[ext_resource type="Texture2D" uid="uid://dh66ac3lqpiko" path="res://assets/map/Terrain (16x16).png" id="3_kdpyv"]
[ext_resource type="AudioStream" uid="uid://0hao7yg3fqm5" path="res://assets/sounds/click.mp3" id="4_bhoiw"]
[ext_resource type="PackedScene" uid="uid://dmr0fcamx7t56" path="res://addons/virtual_joystick/virtual_joystick_scene.tscn" id="4_bquib"]
[ext_resource type="Texture2D" uid="uid://vccq6wdcb4w3" path="res://assets/map/background2.png" id="4_r7b02"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rstri"]
texture = ExtResource("3_kdpyv")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
6:4/0 = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:4/0 = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:4/0 = 0
8:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:4/0 = 0
9:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:4/0 = 0
10:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
6:5/0 = 0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:5/0 = 0
7:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:5/0 = 0
8:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:5/0 = 0
9:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:5/0 = 0
10:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
6:6/0 = 0
6:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:6/0 = 0
7:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:6/0 = 0
8:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0

[sub_resource type="TileSet" id="TileSet_opggm"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_rstri")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fgdjn"]
texture = ExtResource("3_kdpyv")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
12:5/0 = 0
12:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:5/0 = 0
13:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:5/0 = 0
14:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
13:6/0 = 0
13:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:6/0 = 0
14:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
12:8/0 = 0
12:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:8/0 = 0
13:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:8/0 = 0
14:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:8/0 = 0
15:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
12:9/0 = 0
12:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:9/0 = 0
13:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:9/0 = 0
14:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:9/0 = 0
15:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
13:10/0 = 0
13:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:10/0 = 0
14:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:10/0 = 0
15:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0

[sub_resource type="TileSet" id="TileSet_2dl3w"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_fgdjn")

[node name="game" type="Node"]
script = ExtResource("1_xk3sj")

[node name="Message" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_right = 250.0
offset_bottom = 50.0
grow_horizontal = 2
size_flags_vertical = 1

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_50voc")

[node name="Lobby" type="TileMapLayer" parent="TextureRect"]
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAACABQAAAAHAAQAAAADABQAAAAHAAQAAAAEABQAAAAHAAQAAAAFABQAAAAHAAQAAAAGABQAAAAHAAQAAAAHABQAAAAHAAQAAAAIABQAAAAHAAQAAAAJABQAAAAHAAQAAAAKABQAAAAHAAQAAAALABQAAAAHAAQAAAAMABQAAAAHAAQAAAANABQAAAAHAAQAAAAOABQAAAAHAAQAAAAPABQAAAAHAAQAAAAQABQAAAAHAAQAAAARABQAAAAHAAQAAAASABQAAAAHAAQAAAATABQAAAAHAAQAAAAUABQAAAAHAAQAAAAVABQAAAAHAAQAAAAWABQAAAAHAAQAAAAXABQAAAAHAAQAAAAYABQAAAAHAAQAAAAZABQAAAAHAAQAAAAaABQAAAAHAAQAAAAbABQAAAAHAAQAAAAcABQAAAAHAAQAAAAdABQAAAAHAAQAAAAeABQAAAAHAAQAAAAfABQAAAAHAAQAAAAgABQAAAAHAAQAAAAhABQAAAAHAAQAAAAiABQAAAAHAAQAAAAjABQAAAAHAAQAAAAkABMAAAAGAAUAAAAkABIAAAAGAAUAAAAkABEAAAAGAAUAAAAkABAAAAAGAAUAAAAkAA8AAAAGAAUAAAAkAA4AAAAGAAUAAAAkAA0AAAAGAAUAAAAkAAwAAAAGAAUAAAAkAAsAAAAGAAUAAAAkAAoAAAAGAAUAAAAkAAkAAAAGAAUAAAAkAAgAAAAGAAUAAAAkAAcAAAAGAAUAAAAkAAYAAAAGAAUAAAAkAAUAAAAGAAUAAAAkAAQAAAAGAAUAAAAkAAMAAAAGAAUAAAAkAAIAAAAGAAUAAAAkAAEAAAAGAAUAAAAkAAAAAAAGAAUAAAAjAP//AAAHAAYAAAAiAP//AAAHAAYAAAAhAP//AAAHAAYAAAAgAP//AAAHAAYAAAAfAP//AAAHAAYAAAAeAP//AAAHAAYAAAAdAP//AAAHAAYAAAAcAP//AAAHAAYAAAAbAP//AAAHAAYAAAAaAP//AAAHAAYAAAAZAP//AAAHAAYAAAAYAP//AAAHAAYAAAAXAP//AAAHAAYAAAAWAP//AAAHAAYAAAAVAP//AAAHAAYAAAAUAP//AAAHAAYAAAATAP//AAAHAAYAAAASAP//AAAHAAYAAAARAP//AAAHAAYAAAAQAP//AAAHAAYAAAAPAP//AAAHAAYAAAAOAP//AAAHAAYAAAANAP//AAAHAAYAAAAMAP//AAAHAAYAAAALAP//AAAHAAYAAAAKAP//AAAHAAYAAAAJAP//AAAHAAYAAAAIAP//AAAHAAYAAAAHAP//AAAHAAYAAAAGAP//AAAHAAYAAAAFAP//AAAHAAYAAAAEAP//AAAHAAYAAAADAP//AAAHAAYAAAACAP//AAAHAAYAAAABAP//AAAHAAYAAAAAAP//AAAHAAYAAAD//wAAAAAIAAUAAAD//wEAAAAIAAUAAAD//wIAAAAIAAUAAAD//wMAAAAIAAUAAAD//wQAAAAIAAUAAAD//wUAAAAIAAUAAAD//wYAAAAIAAUAAAD//wcAAAAIAAUAAAD//wgAAAAIAAUAAAD//wkAAAAIAAUAAAD//woAAAAIAAUAAAD//wsAAAAIAAUAAAD//wwAAAAIAAUAAAD//w0AAAAIAAUAAAD//w4AAAAIAAUAAAD//w8AAAAIAAUAAAD//xAAAAAIAAUAAAD//xEAAAAIAAUAAAD//xIAAAAIAAUAAAD//xMAAAAIAAUAAAABABQAAAAHAAQAAAAAABQAAAAHAAQAAAAAAAsAAAAHAAQAAAABAAsAAAAIAAQAAAABAAwAAAAIAAUAAAABAA0AAAAIAAUAAAABAA4AAAAIAAUAAAABAA8AAAAIAAUAAAABABAAAAAIAAUAAAABABEAAAAIAAUAAAABABIAAAAIAAUAAAABABMAAAAIAAUAAAALABMAAAAGAAQAAAAMABIAAAAGAAQAAAANABEAAAAGAAQAAAAOABAAAAAGAAQAAAAPABAAAAAHAAQAAAAQABAAAAAHAAQAAAARABAAAAAIAAQAAAASABEAAAAIAAQAAAATABIAAAAIAAQAAAAUABMAAAAIAAQAAAARABMAAAAHAAUAAAARABIAAAAHAAUAAAAQABIAAAAHAAUAAAAQABEAAAAHAAUAAAAPABEAAAAHAAUAAAAPABIAAAAHAAUAAAAOABEAAAAHAAUAAAARABEAAAAHAAUAAAASABIAAAAHAAUAAAASABMAAAAHAAUAAAATABMAAAAHAAUAAAAOABIAAAAHAAUAAAAOABMAAAAHAAUAAAANABMAAAAHAAUAAAANABIAAAAHAAUAAAAQABMAAAAHAAUAAAAUAAoAAAAJAAQAAAAUAAsAAAAJAAUAAAAYAAoAAAAKAAQAAAAYAAsAAAAKAAUAAAAVAAoAAAAHAAQAAAAWAAoAAAAHAAQAAAAXAAoAAAAHAAQAAAAXAAsAAAAHAAYAAAAWAAsAAAAHAAYAAAAVAAsAAAAHAAYAAAAfAAwAAAAGAAQAAAAfAA0AAAAGAAUAAAAfAA4AAAAGAAUAAAAfAA8AAAAGAAUAAAAfABAAAAAGAAUAAAAfABEAAAAGAAUAAAAfABIAAAAGAAUAAAAfABMAAAAGAAUAAAAgAAwAAAAHAAQAAAAhAAwAAAAHAAQAAAAiAAwAAAAHAAQAAAAjAAwAAAAHAAQAAAAgAA8AAAAHAAUAAAAgABAAAAAHAAUAAAAgABEAAAAHAAUAAAAhAA4AAAAHAAUAAAAiAA4AAAAHAAUAAAAiAA0AAAAHAAUAAAAiAA8AAAAHAAUAAAAiABAAAAAHAAUAAAAiABEAAAAHAAUAAAAiABIAAAAHAAUAAAAiABMAAAAHAAUAAAAhABMAAAAHAAUAAAAgABMAAAAHAAUAAAAjABMAAAAHAAUAAAAjABIAAAAHAAUAAAAjABEAAAAHAAUAAAAjABAAAAAHAAUAAAAjAA8AAAAHAAUAAAAjAA4AAAAHAAUAAAAhAA0AAAAHAAUAAAAhABEAAAAHAAUAAAAhABIAAAAHAAUAAAAjAA0AAAAHAAUAAAAPABMAAAAHAAUAAAA=")
tile_set = SubResource("TileSet_opggm")

[node name="SpawnPoint1" type="Marker2D" parent="TextureRect/Lobby"]
position = Vector2(163.5, 134)

[node name="SpawnPoint2" type="Marker2D" parent="TextureRect/Lobby"]
position = Vector2(233.5, 126)

[node name="SpawnPoint3" type="Marker2D" parent="TextureRect/Lobby"]
position = Vector2(347, 114.5)

[node name="SpawnPoint4" type="Marker2D" parent="TextureRect/Lobby"]
position = Vector2(250, 182)

[node name="SpawnPoint5" type="Marker2D" parent="TextureRect/Lobby"]
position = Vector2(187, 209.5)

[node name="TextureRect2" type="TextureRect" parent="."]
anchors_preset = -1
anchor_left = -3.482
anchor_right = -0.475
anchor_bottom = 2.506
offset_left = 0.26416
offset_top = -18.0
offset_right = 0.200012
offset_bottom = 0.111938
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
texture = ExtResource("4_r7b02")
metadata/_edit_use_anchors_ = true

[node name="Map2" type="TileMapLayer" parent="TextureRect2"]
texture_filter = 1
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAAAAAEAAAACAAEAAAAAAAIAAAACAAEAAAAAAAMAAAACAAEAAAAAAAQAAAACAAEAAAAAAAUAAAACAAEAAAAAAAYAAAACAAEAAAAAAAcAAAACAAEAAAAAAAgAAAACAAEAAAAAAAkAAAACAAEAAAAAAAoAAAACAAEAAAAAAAsAAAACAAEAAAAAAAwAAAACAAEAAAAAAA0AAAACAAEAAAAAAA4AAAACAAEAAAAAAA8AAAACAAEAAAAAABAAAAACAAEAAAAAABEAAAACAAEAAAAAABIAAAACAAEAAAAAABMAAAACAAEAAAAAABQAAAACAAEAAAAAABUAAAACAAEAAAAAABYAAAACAAEAAAAAABcAAAACAAEAAAAAABgAAAACAAEAAAACAAAAAAABAAIAAAADAAAAAAABAAIAAAAEAAAAAAABAAIAAAAFAAAAAAABAAIAAAAGAAAAAAABAAIAAAAHAAAAAAABAAIAAAAIAAAAAAABAAIAAAAJAAAAAAABAAIAAAAKAAAAAAABAAIAAAALAAAAAAABAAIAAAAMAAAAAAABAAIAAAANAAAAAAABAAIAAAAOAAAAAAABAAIAAAAPAAAAAAABAAIAAAAQAAAAAAABAAIAAAARAAAAAAABAAIAAAASAAAAAAABAAIAAAATAAAAAAABAAIAAAAUAAAAAAABAAIAAAAVAAAAAAABAAIAAAAWAAAAAAABAAIAAAAXAAAAAAABAAIAAAAYAAAAAAABAAIAAAAZAAAAAAABAAIAAAAaAAAAAAABAAIAAAAbAAAAAAABAAIAAAAcAAAAAAABAAIAAAAdAAAAAAABAAIAAAAeAAAAAAABAAIAAAAfAAAAAAABAAIAAAAgAAAAAAABAAIAAAAhAAAAAAABAAIAAAAiAAAAAAABAAIAAAAjAAAAAAABAAIAAAAkAAAAAAABAAIAAAAlAAAAAAABAAIAAAAmAAAAAAABAAIAAAAnAAAAAAABAAIAAAAoAAAAAAABAAIAAAApAAAAAAABAAIAAAAqAAAAAAABAAIAAAArAAAAAAABAAIAAAAsAAAAAAABAAIAAAAtAAAAAAABAAIAAAAuAAAAAAABAAIAAAAvAAAAAAABAAIAAAAwAAAAAAABAAIAAAAxAAAAAAABAAIAAAAyAAAAAAABAAIAAAAzAAAAAAABAAIAAAA0AAAAAAABAAIAAAA1AAAAAAABAAIAAAA2AAAAAAACAAAAAAA2AAEAAAAAAAEAAAA2AAIAAAAAAAEAAAA2AAMAAAAAAAEAAAA2AAQAAAAAAAEAAAA2AAUAAAAAAAEAAAA2AAYAAAAAAAEAAAA2AAcAAAAAAAEAAAA2AAgAAAAAAAEAAAA2AAkAAAAAAAEAAAA2AAoAAAAAAAEAAAA2AAsAAAAAAAEAAAA2AAwAAAAAAAEAAAA2AA0AAAAAAAEAAAA2AA4AAAAAAAEAAAA2AA8AAAAAAAEAAAA2ABAAAAAAAAEAAAA2ABEAAAAAAAEAAAA2ABIAAAAAAAEAAAA2ABMAAAAAAAEAAAA2ABQAAAAAAAEAAAA2ABUAAAAAAAEAAAA2ABYAAAAAAAEAAAA2ABcAAAAAAAEAAAA2ABgAAAAAAAEAAAA2ABkAAAAAAAIAAAA1ABkAAAABAAAAAAA0ABkAAAABAAAAAAAzABkAAAABAAAAAAAyABkAAAABAAAAAAAxABkAAAABAAAAAAAwABkAAAABAAAAAAAvABkAAAABAAAAAAAuABkAAAABAAAAAAAtABkAAAABAAAAAAAsABkAAAABAAAAAAArABkAAAABAAAAAAAqABkAAAABAAAAAAApABkAAAABAAAAAAAoABkAAAABAAAAAAAnABkAAAABAAAAAAAmABkAAAABAAAAAAAlABkAAAABAAAAAAAkABkAAAABAAAAAAAjABkAAAABAAAAAAAiABkAAAABAAAAAAAhABkAAAABAAAAAAAgABkAAAABAAAAAAAfABkAAAABAAAAAAAeABkAAAABAAAAAAAdABkAAAABAAAAAAAcABkAAAABAAAAAAAbABkAAAABAAAAAAAaABkAAAABAAAAAAAZABkAAAABAAAAAAAYABkAAAABAAAAAAAXABkAAAABAAAAAAAWABkAAAABAAAAAAAVABkAAAABAAAAAAAUABkAAAABAAAAAAATABkAAAABAAAAAAASABkAAAABAAAAAAARABkAAAABAAAAAAAQABkAAAABAAAAAAAPABkAAAABAAAAAAAOABkAAAABAAAAAAANABkAAAABAAAAAAAMABkAAAABAAAAAAALABkAAAABAAAAAAAKABkAAAABAAAAAAAJABkAAAABAAAAAAAIABkAAAABAAAAAAAHABkAAAABAAAAAAAGABkAAAABAAAAAAAFABkAAAABAAAAAAAEABkAAAABAAAAAAADABkAAAABAAAAAAACABkAAAABAAAAAAABABkAAAABAAAAAAAAABkAAAAAAAIAAAABAAAAAAABAAIAAAAAAAAAAAACAAAAAAABABUAAAABAAAAAAABABYAAAABAAEAAAABABcAAAABAAEAAAABABgAAAABAAEAAAACABgAAAABAAEAAAADABgAAAABAAEAAAADABcAAAABAAEAAAADABYAAAACAAAAAAACABYAAAABAAEAAAACABUAAAACAAAAAAACABcAAAABAAEAAAAEABcAAAACAAAAAAAEABgAAAABAAEAAAAFABgAAAABAAAAAAAGABgAAAABAAAAAAAHABgAAAAAAAIAAAAGAAwAAAABAAEAAAAGAA0AAAABAAEAAAAGAA4AAAABAAEAAAAGAA8AAAABAAEAAAAGABAAAAABAAEAAAAHABEAAAABAAEAAAAHABIAAAABAAIAAAAHABAAAAABAAEAAAAHAA8AAAABAAEAAAAHAA4AAAABAAEAAAAHAA0AAAABAAEAAAAHAAwAAAABAAEAAAAGABEAAAABAAEAAAAGABIAAAABAAIAAAAGAAsAAAABAAAAAAAHAAsAAAABAAAAAAAIAAwAAAACAAEAAAAIAA0AAAACAAEAAAAIAA4AAAACAAEAAAAIAA8AAAACAAEAAAAIABAAAAACAAEAAAAIABEAAAACAAEAAAAFAAwAAAAAAAEAAAAFAA0AAAAAAAEAAAAFAA4AAAAAAAEAAAAFAA8AAAAAAAEAAAAFABAAAAAAAAEAAAAFABEAAAAAAAEAAAAFABIAAAAAAAIAAAAIABIAAAACAAIAAAAIAAsAAAACAAAAAAAFAAsAAAAAAAAAAAALABQAAAAAAAAAAAALABUAAAAAAAEAAAALABYAAAAAAAIAAAAMABQAAAABAAAAAAAMABUAAAABAAEAAAAMABYAAAABAAIAAAANABQAAAACAAAAAAANABUAAAACAAEAAAANABYAAAACAAIAAAAPABUAAAAAAAAAAAAPABYAAAAAAAEAAAAPABcAAAAAAAIAAAAQABUAAAABAAAAAAAQABYAAAABAAEAAAAQABcAAAABAAIAAAARABUAAAACAAAAAAARABYAAAACAAEAAAARABcAAAACAAIAAAATABcAAAAAAAAAAAAUABcAAAABAAAAAAAVABcAAAACAAAAAAAYABgAAAAAAAAAAAAZABgAAAABAAAAAAAaABgAAAABAAAAAAAbABgAAAABAAAAAAAcABgAAAACAAAAAAAdABgAAAAAAAAAAAAeABcAAAAAAAAAAAAfABYAAAAAAAAAAAAgABUAAAAAAAAAAAAhABUAAAABAAAAAAAiABUAAAABAAAAAAAjABUAAAABAAAAAAAkABUAAAACAAAAAAAkABYAAAACAAEAAAAlABcAAAACAAAAAAAkABcAAAABAAEAAAAjABcAAAABAAEAAAAiABcAAAABAAEAAAAiABYAAAABAAEAAAAjABYAAAABAAEAAAAhABYAAAABAAEAAAAgABYAAAABAAEAAAAgABcAAAABAAEAAAAgABgAAAABAAEAAAAfABgAAAABAAEAAAAfABcAAAABAAEAAAAeABgAAAABAAEAAAAhABgAAAABAAEAAAAiABgAAAABAAEAAAAjABgAAAABAAEAAAAkABgAAAABAAEAAAAhABcAAAABAAEAAAAmABgAAAABAAAAAAAnABgAAAABAAAAAAAoABgAAAACAAAAAAAlABgAAAABAAEAAAApABAAAAABAAEAAAApABEAAAABAAEAAAApABIAAAABAAEAAAAqABIAAAABAAEAAAAqABMAAAABAAIAAAArABIAAAABAAEAAAArABEAAAABAAEAAAAsABAAAAABAAEAAAAsAA8AAAABAAEAAAAtAA4AAAAOAAYAAAAtAA0AAAAOAAUAAAAsAA0AAAANAAUAAAAsAAwAAAABAAEAAAArAA0AAAAOAAUAAAArAA4AAAAOAAYAAAAqAA8AAAABAAEAAAAqABAAAAABAAEAAAArABAAAAABAAEAAAAsAA4AAAANAAYAAAAsAAsAAAABAAEAAAArAAsAAAABAAEAAAAqAAwAAAABAAEAAAAqAA0AAAANAAUAAAApAA4AAAABAAEAAAApAA8AAAABAAEAAAAsAAoAAAABAAEAAAAqAA4AAAANAAYAAAApAA0AAAABAAEAAAApAAwAAAABAAEAAAAoAAsAAAAAAAEAAAAoAAoAAAAAAAEAAAApAAoAAAABAAEAAAAqAAsAAAABAAEAAAArAA8AAAABAAEAAAAqABEAAAABAAEAAAAtAAwAAAABAAEAAAAtAA8AAAABAAEAAAAtABAAAAABAAEAAAAtABEAAAABAAEAAAAtABIAAAABAAEAAAAuABAAAAABAAEAAAAuAA8AAAABAAEAAAAuAA4AAAABAAEAAAAvAA0AAAABAAEAAAAvAAwAAAABAAEAAAAwAAwAAAABAAEAAAAuAA0AAAABAAEAAAAuABEAAAABAAEAAAAuABIAAAABAAEAAAAvABEAAAABAAEAAAAvABAAAAABAAEAAAAvAA8AAAABAAEAAAAvAA4AAAABAAEAAAAwAA0AAAABAAEAAAAwABAAAAABAAEAAAAwABEAAAACAAEAAAAwAA8AAAABAAEAAAAvAAsAAAABAAEAAAAvAAoAAAABAAEAAAAuAAoAAAABAAEAAAAtAAoAAAABAAEAAAAtAAkAAAABAAEAAAAsAAkAAAABAAEAAAArAAoAAAABAAEAAAAqAAoAAAABAAEAAAArAAwAAAABAAEAAAAtAAsAAAABAAEAAAAuAAsAAAABAAEAAAApAAsAAAABAAEAAAAoAAwAAAABAAEAAAAoAAkAAAAAAAEAAAAoAAgAAAAAAAAAAAApAAgAAAABAAAAAAAqAAgAAAABAAAAAAArAAgAAAABAAEAAAAsAAgAAAABAAEAAAAtAAgAAAABAAAAAAAuAAkAAAABAAEAAAAvAAkAAAABAAEAAAArAAkAAAABAAEAAAAqAAkAAAABAAEAAAApAAkAAAABAAEAAAAuAAwAAAABAAEAAAAvAAgAAAABAAAAAAAwAAkAAAACAAEAAAAuAAgAAAABAAAAAAAwAAoAAAACAAEAAAAwAAsAAAACAAEAAAAwAA4AAAABAAEAAAAsABEAAAABAAEAAAAsABIAAAABAAEAAAAtABMAAAABAAIAAAAsABMAAAABAAIAAAArABMAAAABAAIAAAAoABMAAAAAAAIAAAApABMAAAABAAIAAAAvABIAAAABAAEAAAAwABIAAAACAAEAAAAvABMAAAABAAIAAAAuABMAAAABAAIAAAAwABMAAAACAAIAAAAwAAgAAAACAAAAAAAoAA8AAAABAAEAAAAoABAAAAABAAEAAAAoABEAAAABAAEAAAAoABIAAAABAAEAAAAoAA0AAAABAAEAAAAoAA4AAAABAAEAAAAmABMAAAAMAAUAAAAlABMAAAAMAAUAAAAXAAcAAAAMAAgAAAAYAAcAAAANAAgAAAAZAAcAAAANAAgAAAAaAAcAAAANAAgAAAAbAAcAAAANAAgAAAAcAAcAAAANAAgAAAAdAAcAAAANAAgAAAAeAAcAAAAOAAgAAAAXAAsAAAAMAAgAAAAeAAsAAAAOAAgAAAAYAAsAAAANAAgAAAAZAAsAAAAOAAgAAAAaAAsAAAABAAEAAAAbAAsAAAABAAEAAAAcAAsAAAAMAAgAAAAdAAsAAAANAAgAAAAXAAgAAAAMAAkAAAAXAAkAAAABAAEAAAAXAAoAAAABAAEAAAAYAAgAAAABAAEAAAAYAAkAAAABAAEAAAAYAAoAAAABAAEAAAAZAAgAAAABAAEAAAAZAAkAAAABAAEAAAAZAAoAAAABAAEAAAAaAAgAAAABAAEAAAAaAAkAAAABAAEAAAAaAAoAAAABAAEAAAAbAAgAAAABAAEAAAAbAAkAAAABAAEAAAAbAAoAAAABAAEAAAAcAAgAAAABAAEAAAAcAAkAAAABAAEAAAAcAAoAAAABAAEAAAAdAAgAAAABAAEAAAAdAAkAAAABAAEAAAAdAAoAAAABAAEAAAAeAAgAAAAMAAkAAAAeAAkAAAABAAEAAAAeAAoAAAABAAEAAAAgAAwAAAAMAAkAAAAhAAwAAAAMAAkAAAAiAA4AAAAMAAkAAAAjAA4AAAAMAAkAAAAaABAAAAAMAAkAAAAbABAAAAAMAAkAAAAGAAUAAAAMAAUAAAAGAAYAAAAMAAUAAAAGAAcAAAAMAAUAAAAHAAUAAAABAAEAAAAHAAYAAAABAAEAAAAHAAcAAAAMAAUAAAAIAAUAAAABAAEAAAAIAAYAAAABAAEAAAAIAAcAAAAMAAUAAAAJAAUAAAABAAEAAAAJAAYAAAABAAEAAAAJAAcAAAAMAAUAAAAKAAUAAAABAAEAAAAKAAYAAAABAAEAAAAKAAcAAAAMAAUAAAALAAUAAAABAAEAAAALAAYAAAABAAEAAAALAAcAAAAMAAUAAAAMAAUAAAABAAEAAAAMAAYAAAABAAEAAAAMAAcAAAAMAAUAAAANAAUAAAABAAEAAAANAAYAAAABAAEAAAANAAcAAAAMAAUAAAAOAAUAAAABAAEAAAAOAAYAAAABAAEAAAAOAAcAAAAMAAUAAAAPAAUAAAABAAEAAAAPAAYAAAABAAEAAAAPAAcAAAAMAAUAAAAQAAUAAAABAAEAAAAQAAYAAAAHAAUAAAAQAAcAAAAHAAUAAAAMAAoAAAAAAAAAAAAMAAsAAAAAAAEAAAAMAAwAAAAAAAEAAAAMAA4AAAABAAEAAAAMAA8AAAABAAEAAAAMABAAAAAAAAEAAAAMABEAAAAAAAIAAAANAAoAAAABAAAAAAANAAsAAAABAAEAAAANAAwAAAABAAEAAAANAA0AAAABAAEAAAANAA4AAAABAAEAAAANAA8AAAABAAEAAAANABAAAAABAAEAAAANABEAAAABAAIAAAAOAAoAAAABAAAAAAAOAAsAAAABAAEAAAAOAAwAAAABAAEAAAAOAA0AAAABAAEAAAAOAA4AAAABAAEAAAAOAA8AAAABAAEAAAAOABAAAAABAAEAAAAOABEAAAABAAIAAAAPAAoAAAACAAAAAAAPAAsAAAACAAEAAAAPAAwAAAACAAEAAAAPAA0AAAABAAEAAAAPAA4AAAABAAEAAAAPAA8AAAABAAEAAAAPABAAAAACAAEAAAAPABEAAAACAAIAAAAMAA0AAAABAAEAAAAQAAgAAAAMAAUAAAARAAYAAAAHAAUAAAARAAcAAAAHAAUAAAARAAgAAAAMAAUAAAASAAYAAAAMAAUAAAASAAcAAAAHAAUAAAASAAgAAAAMAAUAAAATAAcAAAAHAAUAAAATAAgAAAAMAAUAAAAPAAgAAAAMAAUAAAAGAAQAAAAMAAUAAAAHAAQAAAAMAAUAAAAIAAQAAAAMAAUAAAAJAAQAAAAMAAUAAAAKAAQAAAAMAAUAAAALAAQAAAAMAAUAAAAMAAQAAAAMAAUAAAANAAQAAAAMAAUAAAAOAAQAAAAMAAUAAAAPAAQAAAAMAAUAAAAQAAQAAAAMAAUAAAARAAQAAAAMAAUAAAARAAUAAAAMAAUAAAASAAUAAAAMAAUAAAATAAYAAAAMAAUAAAAUAAYAAAAMAAUAAAAUAAcAAAAMAAUAAAAUAAgAAAAMAAUAAAA=")
tile_set = SubResource("TileSet_2dl3w")

[node name="SpawnPoint1" type="Marker2D" parent="TextureRect2/Map2"]
position = Vector2(382.25, 329)

[node name="SpawnPoint2" type="Marker2D" parent="TextureRect2/Map2"]
position = Vector2(324.75, 252.5)

[node name="SpawnPoint3" type="Marker2D" parent="TextureRect2/Map2"]
position = Vector2(273.75, 323)

[node name="SpawnPoint4" type="Marker2D" parent="TextureRect2/Map2"]
position = Vector2(386, 275.75)

[node name="SpawnPoint5" type="Marker2D" parent="TextureRect2/Map2"]
position = Vector2(497.75, 278)

[node name="UI" type="CanvasLayer" parent="."]

[node name="MapSelection" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="UI/MapSelection"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -103.0
offset_right = 18.0
offset_bottom = 77.0
grow_horizontal = 2
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MapSelection/MarginContainer"]
layout_mode = 2

[node name="Map1" type="Button" parent="UI/MapSelection/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Map1
"

[node name="Map2" type="Button" parent="UI/MapSelection/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Map2
"

[node name="HostIPLabel" type="Label" parent="UI"]
offset_left = 5.0
offset_top = 40.0
offset_right = 171.0
offset_bottom = 63.0

[node name="Multiplayer" type="Control" parent="UI"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="UI/Multiplayer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.125
anchor_top = -0.25
anchor_right = 0.125
anchor_bottom = -0.25
offset_top = 15.0
offset_right = 166.0
offset_bottom = 194.0
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Multiplayer/MarginContainer"]
layout_mode = 2

[node name="HostIPField" type="LineEdit" parent="UI/Multiplayer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Host" type="Button" parent="UI/Multiplayer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Host"

[node name="Join" type="Button" parent="UI/Multiplayer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Join"

[node name="Virtual Joystick" parent="UI" instance=ExtResource("4_bquib")]
offset_left = 73.0
offset_top = -218.0
offset_right = 294.0
offset_bottom = -6.0
action_up = "ui_accept"

[node name="Back" type="Button" parent="."]
offset_left = 448.0
offset_top = 2.0
offset_right = 614.0
offset_bottom = 52.0
theme_override_font_sizes/font_size = 30
text = "Back
"

[node name="sound_click" type="AudioStreamPlayer2D" parent="."]
position = Vector2(63, -59)
stream = ExtResource("4_bhoiw")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://c5won7nctd8y6")
spawn_path = NodePath("..")

[connection signal="pressed" from="UI/Multiplayer/MarginContainer/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="UI/Multiplayer/MarginContainer/VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
